--- a/u3.qmd
+++ b/u3.qmd
@@ -134,7 +134,7 @@ Reflect on the BRAVING checklist (p. 113-114) and write a 250-word journal entry
 
 :::
 
-### Activity: A Culture of Fear {.unnumbered}
+### Activity: A Culture of Fear
 
 ::: {.learning-activity time="60"}
 
