--- a/u8.qmd
+++ b/u8.qmd
@@ -228,7 +228,7 @@ Read Chapter 6, "Interconnectedness," in *Who Do We Choose to Be: Facing Reality
 
 As you read this chapter, think about Archbishop Desmond Tutu’s comment: "We exist in a bundle of life. We say, ‘A person is a person through other people.’ It is not ‘I think therefore I am’ [but rather] I am human because I belong. I participate, I share" (as cited in Wheatley, 2017, p. 223).
 
-Based on the reading, reflect on the following questions: {.unnumbered}
+Based on the reading, reflect on the following questions:
 
 - Who has influenced you to become the person you are? Who do you depend on as ground and support for your life?
 - Demonstrate your network of relationships and annotate with the key values or wisdom you have learned from each person.
