--- a/u7.qmd
+++ b/u7.qmd
@@ -104,10 +104,10 @@ Servant leadership requires a strong orientation to values that allow adult educ
 By way of example of what servant leadership can look like as an adult educator, I share part of my own journey with you. As a Canadian educator, one key challenge I face is the mandate to Indigenize the curriculum. This is part of a broader call to educational leaders to work toward healing and reconciliation. In Canadian history, education was used as a tool of assimilation to extricate children from their culture and language. A statement of the Aboriginal Healing Foundation [-@aboriginalhealingfoundationCompendiumAboriginalHealing2010] succinctly summarizes the gravity of this call to action:
 
 > No other population group in Canada’s history has endured such a deliberate, comprehensive, and prolonged assault on their human rights as that of Indigenous people. Yet, despite growing recognition of past wrongs, many Canadians remain unaware of the full scope of these injustices or their impacts. (p. 35).
->
-> Dr. Adrienne Castellon, an original author of this course, shared her reflections on the process of learning about and integration Indigenous perspectives into her teaching and learning.
->
-> More than a political mandate however, educators need to realize our moral responsibilities to relate accurately and acknowledge fully the nation’s regrettable past. I propose that the effort educators in Canada are undergoing requires servant leadership dispositions. For me, this has been, and continues to be, a process of developing knowledge of my own ignorance, discovering my own prejudices and myths and having the courage to change views and practices. It has required the disposition to work through intellectual and emotional complexities that have caused confusion and frustration. But I am willing to be disturbed and unsettled. As I strive to live servant leadership principles, approach this challenge with intellectual humility, curiosity and respect for all people which has taken much of the fear of ‘doing it wrong’ away. (Castellon, n.d.)
+
+Dr. Adrienne Castellon, an original author of this course, shared her reflections on the process of learning about and integration Indigenous perspectives into her teaching and learning.
+
+More than a political mandate however, educators need to realize our moral responsibilities to relate accurately and acknowledge fully the nation’s regrettable past. I propose that the effort educators in Canada are undergoing requires servant leadership dispositions. For me, this has been, and continues to be, a process of developing knowledge of my own ignorance, discovering my own prejudices and myths and having the courage to change views and practices. It has required the disposition to work through intellectual and emotional complexities that have caused confusion and frustration. But I am willing to be disturbed and unsettled. As I strive to live servant leadership principles, approach this challenge with intellectual humility, curiosity and respect for all people which has taken much of the fear of ‘doing it wrong’ away. (Castellon, n.d.)
 
 Our world is in need of adult educators who strive to live servant leadership principles in their practice. The resulting wideness of spirit dedicated toward the welfare of others is magnanimity—what Aristotle called the crowing virtue in his hierarchy of virtues. The adult educator has an important role in creating a more peaceful world through education that serves people and influences others to do the same.
 
