--- a/u3.qmd
+++ b/u3.qmd
@@ -149,7 +149,7 @@ Read Chapter 2, "A Culture of Fear," in *The Courage to Teach* (Palmer, 2017). A
 
 ::: {.learning-activity time="45"}
 
-Listen to ["A Place in this Word" (3:20) (Taylor Swift, 2006)](https://music.youtube.com/watch?v=_FNQ5qLuLjA&list=RDAMVM_FNQ5qLuLjA){target="_blank"}.
+Listen to ["A Place in this Word" (3:20) [@swiftPlaceThisWorld2006]](https://music.youtube.com/watch?v=_FNQ5qLuLjA&list=RDAMVM_FNQ5qLuLjA){target="_blank"}.
 
 **Consider the following scenario:**
 
