--- a/u7.qmd
+++ b/u7.qmd
@@ -107,7 +107,7 @@ By way of example of what servant leadership can look like as an adult educator,
 
 Dr. Adrienne Castellon, an original author of this course, shared her reflections on the process of learning about and integration Indigenous perspectives into her teaching and learning.
 
-More than a political mandate however, educators need to realize our moral responsibilities to relate accurately and acknowledge fully the nation’s regrettable past. I propose that the effort educators in Canada are undergoing requires servant leadership dispositions. For me, this has been, and continues to be, a process of developing knowledge of my own ignorance, discovering my own prejudices and myths and having the courage to change views and practices. It has required the disposition to work through intellectual and emotional complexities that have caused confusion and frustration. But I am willing to be disturbed and unsettled. As I strive to live servant leadership principles, approach this challenge with intellectual humility, curiosity and respect for all people which has taken much of the fear of ‘doing it wrong’ away. (Castellon, n.d.)
+More than a political mandate however, educators need to realize our moral responsibilities to relate accurately and acknowledge fully the nation’s regrettable past. I propose that the effort educators in Canada are undergoing requires servant leadership dispositions. For me, this has been, and continues to be, a process of developing knowledge of my own ignorance, discovering my own prejudices and myths and having the courage to change views and practices. It has required the disposition to work through intellectual and emotional complexities that have caused confusion and frustration. But I am willing to be disturbed and unsettled. As I strive to live servant leadership principles, approach this challenge with intellectual humility, curiosity and respect for all people which has taken much of the fear of ‘doing it wrong’ away [@castellonCreatingAuthenticLearning].
 
 Our world is in need of adult educators who strive to live servant leadership principles in their practice. The resulting wideness of spirit dedicated toward the welfare of others is magnanimity—what Aristotle called the crowing virtue in his hierarchy of virtues. The adult educator has an important role in creating a more peaceful world through education that serves people and influences others to do the same.
 
