--- a/u8.qmd
+++ b/u8.qmd
@@ -81,7 +81,7 @@ Kolb (1984)’s Learning Cycle
 
 Kolb (1984) emphasized that learning never ends—that we continue to experience life and continue to learn from life—in our professional, personal, and community life. For example, if we think about software again, we can quickly understand that our learning is greatly enhanced when we engage in experiential learning. We might have someone demonstrate a software to us, but if we can follow along with the demo, selecting the items they suggest, and working through the steps to achieve what we’re trying to accomplish or create, we are more likely to remember how to complete the software task later. By practicing while we are learning, we have more sustained learning.
 
-For further reference, read ["What Is Experiential Learning?"](https://experientiallearninginstitute.org/what-is-experiential-learning/){target="_blank"} [@instituteofexperientiallearningWhatExperientialLearning2025], which illustrates experiential learning theory from its foundational propositions to its applications. Be sure to watch the video, [*This is Experiential Learning*](https://youtu.be/0TeaFPSQsMY){target="_blank"} [-@eblsThisExperientialLearning2020] in the link above.
+For further reference, read ["What Is Experiential Learning?"](https://experientiallearninginstitute.org/what-is-experiential-learning/){target="_blank"} [@instituteofexperientiallearningWhatExperientialLearning2025], which illustrates experiential learning theory from its foundational propositions to its applications. Be sure to watch the video, [*This is Experiential Learning*](https://youtu.be/0TeaFPSQsMY){target="_blank"} [-@kolbThisExperientialLearning2020] in the link above.
 
 As you engage with the content, reflect on the following questions:
 
@@ -137,7 +137,7 @@ What does it mean to teach from depth? It connects to the principle of adult lea
 
 Teaching from depth means nurturing and valuing self-awareness, committing to self-reflection and mindfulness and practicing teaching from depth. This last point is important to balance reflection and introspection with action. Ibarra [-@ibarraOutsightPrincipal2015] refers to this as ‘outsight’ (in contrast to insight) and argues that direct experiences and experimentation are important to develop external perspective. In the context of facilitating adult education, this means trying out various strategies and learning through trial, error, refinement and adjustment. Where internal knowledge, past experience and thinking contribute to insight, external knowledge, new experience and acting contribute to outsight. Teaching from depth involves developing insight and outsight—through utilizing both reflective practices and strategies and experiential learning.
 
-One strategy that can be used to teach for depth is called "Stanislavski’s Magic If" (Schuyler, 2014, p. 204). Stanislavski introduced method acting in the early twentieth century. This method, often referred to as role play, is where actors draw from their own life experiences to produce truthful actions and emotions. In the context of adult education, this method can be used by creating learning experiences in which adult learners engage in role plays, analyze case studies, or explore scenarios. Through this process, adult learners can connect course content with their life experience, to apply solutions to real-world challenges. This technique is often applied in the classroom through case studies. Providing the opportunity to bridge the learner’s life experiences and course learning, challenging the learner to construct and integrate new meaning while being solutions-focused.
+One strategy that can be used to teach for depth is called "Stanislavski’s Magic If" [@schuylerLeadingSpiritPresence2014, p. 204]. Stanislavski introduced method acting in the early twentieth century. This method, often referred to as role play, is where actors draw from their own life experiences to produce truthful actions and emotions. In the context of adult education, this method can be used by creating learning experiences in which adult learners engage in role plays, analyze case studies, or explore scenarios. Through this process, adult learners can connect course content with their life experience, to apply solutions to real-world challenges. This technique is often applied in the classroom through case studies. Providing the opportunity to bridge the learner’s life experiences and course learning, challenging the learner to construct and integrate new meaning while being solutions-focused.
 
 Brookfield and Preskill’s [-@brookfieldDiscussionBook502016] *[The Discussion Book](https://research-ebsco-com.twu.idm.oclc.org/c/bljv25/ebook-viewer/epub/kbeav6rq2v?route=details){target="_blank"},* which was used as a learning resource in LDRS 627, includes several strategies that foster teaching for depth including:
 
